--- a/iBach/iBach/iBach/Classes/Modules/Favorites/Favorites.storyboard
+++ b/iBach/iBach/iBach/Classes/Modules/Favorites/Favorites.storyboard
@@ -14,7 +14,7 @@
         <scene sceneID="F8k-Nb-0FC">
             <objects>
                 <viewController id="4nK-ps-AcP" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="H93-ge-Ivw">
+                    <view key="view" contentMode="scaleToFill" id="H93-ge-Ivw" customClass="AppView" customModule="iBach" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="551"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
