--- a/iBach/iBach/iBach/Classes/Modules/Player/LargePlayer.storyboard
+++ b/iBach/iBach/iBach/Classes/Modules/Player/LargePlayer.storyboard
@@ -42,16 +42,39 @@
                                                 <rect key="frame" x="8" y="28" width="46" height="30"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <state key="normal" title="Return"/>
+                                                <connections>
+                                                    <action selector="returnFromLargePlayer:" destination="Tza-Tl-667" eventType="touchUpInside" id="YGh-Om-Pfl"/>
+                                                </connections>
                                             </button>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fdf-m6-kcv">
+                                            <view contentMode="scaleAspectFit" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dmN-eQ-eZp">
+                                                <rect key="frame" x="71" y="81" width="232" height="232"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </view>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fdf-m6-kcv">
                                                 <rect key="frame" x="62" y="72" width="250" height="250"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES"/>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                         <real key="value" value="5"/>
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                             </imageView>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3gH-Up-32J">
+                                                <rect key="frame" x="120" y="497" width="134" height="55"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" image="Pause"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tvt-8L-t5U">
+                                                <rect key="frame" x="8" y="497" width="134" height="55"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" image="Backward"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HvF-uV-MXG">
+                                                <rect key="frame" x="233" y="497" width="134" height="55"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" image="Forward"/>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </view>
@@ -76,11 +99,16 @@
                         <viewLayoutGuide key="safeArea" id="Nu8-Zn-PV1"/>
                     </view>
                     <connections>
+                        <outlet property="buttonNext" destination="HvF-uV-MXG" id="Sb2-fJ-e3b"/>
+                        <outlet property="buttonPlay" destination="3gH-Up-32J" id="ZMD-Wa-NGZ"/>
+                        <outlet property="buttonPrevious" destination="tvt-8L-t5U" id="6nK-OS-EpE"/>
                         <outlet property="contentView" destination="W9y-m7-a5Q" id="DA8-Qu-SSG"/>
                         <outlet property="imageCoverArt" destination="Fdf-m6-kcv" id="E7d-fN-RRI"/>
                         <outlet property="labelSongArtist" destination="F9z-L9-b3h" id="fkA-zt-EgV"/>
                         <outlet property="labelSongTitle" destination="B6N-Ob-1UM" id="Hx7-0R-dht"/>
+                        <outlet property="returnButton" destination="LnO-zy-rL4" id="j1a-fN-m58"/>
                         <outlet property="scrollView" destination="BhW-63-8FQ" id="zhc-xY-kUp"/>
+                        <outlet property="shadow" destination="dmN-eQ-eZp" id="fe4-gr-iDK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LHM-Mj-WfF" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -88,4 +116,9 @@
             <point key="canvasLocation" x="164" y="155.17241379310346"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Backward" width="54" height="54"/>
+        <image name="Forward" width="54" height="54"/>
+        <image name="Pause" width="54" height="54"/>
+    </resources>
 </document>
