--- a/iBach/iBach/iBach/Classes/Modules/Music/Music.storyboard
+++ b/iBach/iBach/iBach/Classes/Modules/Music/Music.storyboard
@@ -140,30 +140,38 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="769"/>
                                 <subviews>
                                     <button opaque="NO" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bn0-mC-JGM">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="36.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="35.5"/>
                                         <state key="normal" image="Down Arrow"/>
                                         <connections>
                                             <action selector="closeLargePlayer:" destination="lUM-lY-ji0" eventType="touchUpInside" id="hPP-cc-6gH"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FbE-Kt-h3G" userLabel="Lyrics">
+                                        <rect key="frame" x="0.0" y="56.5" width="414" height="30"/>
+                                        <state key="normal" title="Lyrics"/>
+                                        <connections>
+                                            <action selector="lyricsButtonTapHandler:" destination="lUM-lY-ji0" eventType="touchUpInside" id="G2y-yy-UDx"/>
+                                            <segue destination="9lw-Jl-EE5" kind="presentation" id="C0R-x2-ca4"/>
+                                        </connections>
+                                    </button>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PMN-iQ-GRW">
-                                        <rect key="frame" x="0.0" y="57.5" width="414" height="401.5"/>
+                                        <rect key="frame" x="0.0" y="107.5" width="414" height="357"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sogng Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3bh-hl-gUS" customClass="AppLabel" customModule="iBach" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="480" width="414" height="26.5"/>
+                                        <rect key="frame" x="0.0" y="485.5" width="414" height="26.5"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Song Artist - Album - Year" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pEK-2b-mxv">
-                                        <rect key="frame" x="0.0" y="527.5" width="414" height="21"/>
+                                        <rect key="frame" x="0.0" y="533" width="414" height="20"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.32565315950000001" green="0.183454901" blue="0.74090373519999997" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="QDo-zP-csn">
-                                        <rect key="frame" x="0.0" y="569.5" width="414" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="574" width="414" height="20.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jtF-F4-G4v">
                                                 <rect key="frame" x="0.0" y="0.0" width="207" height="20.5"/>
@@ -182,7 +190,7 @@
                                         </subviews>
                                     </stackView>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="t3k-W3-xUc">
-                                        <rect key="frame" x="-2" y="611" width="418" height="31"/>
+                                        <rect key="frame" x="-2" y="615.5" width="418" height="31"/>
                                         <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="thumbTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <userDefinedRuntimeAttributes>
@@ -198,24 +206,24 @@
                                         </connections>
                                     </slider>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="1zt-C3-UDc">
-                                        <rect key="frame" x="0.0" y="662" width="414" height="54.5"/>
+                                        <rect key="frame" x="0.0" y="666.5" width="414" height="53.5"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DCj-pH-ugj">
-                                                <rect key="frame" x="0.0" y="0.0" width="134" height="54.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="134" height="53.5"/>
                                                 <state key="normal" image="Backward"/>
                                                 <connections>
                                                     <action selector="buttonPreviousClick:" destination="lUM-lY-ji0" eventType="touchUpInside" id="rRs-SC-6Ih"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zol-oZ-SfW">
-                                                <rect key="frame" x="140" y="0.0" width="134" height="54.5"/>
+                                                <rect key="frame" x="140" y="0.0" width="134" height="53.5"/>
                                                 <state key="normal" image="Pause"/>
                                                 <connections>
                                                     <action selector="pauseSong:" destination="lUM-lY-ji0" eventType="touchUpInside" id="tjy-sD-I7s"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nOp-cK-Tjq">
-                                                <rect key="frame" x="280" y="0.0" width="134" height="54.5"/>
+                                                <rect key="frame" x="280" y="0.0" width="134" height="53.5"/>
                                                 <state key="normal" image="Forward"/>
                                                 <connections>
                                                     <action selector="buttonNextClick:" destination="lUM-lY-ji0" eventType="touchUpInside" id="G6F-M2-iUc"/>
@@ -224,7 +232,7 @@
                                         </subviews>
                                     </stackView>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="iUB-L5-HK2">
-                                        <rect key="frame" x="-2" y="737.5" width="418" height="32.5"/>
+                                        <rect key="frame" x="-2" y="741" width="418" height="29"/>
                                         <connections>
                                             <action selector="changeVolume:" destination="lUM-lY-ji0" eventType="valueChanged" id="pBY-bi-SA4"/>
                                         </connections>
@@ -285,6 +293,74 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hNK-Ib-OUj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-180" y="-269.41529235382313"/>
+        </scene>
+        <!--Lyrics View Controller-->
+        <scene sceneID="ueb-0A-L5R">
+            <objects>
+                <viewController id="9lw-Jl-EE5" customClass="LyricsViewController" customModule="iBach" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="iSN-nT-bPl">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" usesAttributedText="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TEH-Sy-prB">
+                                <rect key="frame" x="16" y="113" width="382" height="783"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <attributedString key="attributedText">
+                                    <fragment>
+                                        <string key="content">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <attributes>
+                                            <font key="NSFont" size="18" name="ComicSansMS-Bold"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jIo-U5-t97" customClass="AppLabel" customModule="iBach" customModuleProvider="target">
+                                <rect key="frame" x="16" y="60" width="382" height="29"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E9r-vK-bAG">
+                                <rect key="frame" x="368" y="56.5" width="30" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="X"/>
+                                <connections>
+                                    <action selector="didSelectCloseButton:" destination="9lw-Jl-EE5" eventType="touchUpInside" id="qyN-Cx-Ayk"/>
+                                </connections>
+                            </button>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="rKX-yb-zUl">
+                                <rect key="frame" x="188.5" y="434.5" width="37" height="37"/>
+                                <color key="color" cocoaTouchSystemColor="darkTextColor"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="TEH-Sy-prB" secondAttribute="bottom" id="CgH-TU-7O9"/>
+                            <constraint firstItem="E9r-vK-bAG" firstAttribute="centerY" secondItem="jIo-U5-t97" secondAttribute="centerY" id="GRQ-2d-msR"/>
+                            <constraint firstItem="rKX-yb-zUl" firstAttribute="centerX" secondItem="Y3R-Gh-qMF" secondAttribute="centerX" id="IAp-Gy-vLf"/>
+                            <constraint firstItem="TEH-Sy-prB" firstAttribute="top" secondItem="jIo-U5-t97" secondAttribute="bottom" constant="24" id="MW5-36-eAS"/>
+                            <constraint firstItem="Y3R-Gh-qMF" firstAttribute="trailing" secondItem="TEH-Sy-prB" secondAttribute="trailing" constant="16" id="Rww-c9-y60"/>
+                            <constraint firstItem="Y3R-Gh-qMF" firstAttribute="trailing" secondItem="E9r-vK-bAG" secondAttribute="trailing" constant="16" id="aP3-Fg-vt2"/>
+                            <constraint firstItem="rKX-yb-zUl" firstAttribute="centerY" secondItem="Y3R-Gh-qMF" secondAttribute="centerY" id="cpF-KB-fcV"/>
+                            <constraint firstItem="TEH-Sy-prB" firstAttribute="leading" secondItem="Y3R-Gh-qMF" secondAttribute="leading" constant="16" id="esZ-P8-3Xf"/>
+                            <constraint firstItem="Y3R-Gh-qMF" firstAttribute="trailing" secondItem="jIo-U5-t97" secondAttribute="trailing" constant="16" id="ga1-Ze-vp4"/>
+                            <constraint firstItem="jIo-U5-t97" firstAttribute="leading" secondItem="Y3R-Gh-qMF" secondAttribute="leading" constant="16" id="lrg-vr-PU0"/>
+                            <constraint firstItem="jIo-U5-t97" firstAttribute="top" secondItem="Y3R-Gh-qMF" secondAttribute="top" constant="16" id="pXf-Tq-l2Y"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Y3R-Gh-qMF"/>
+                    </view>
+                    <connections>
+                        <outlet property="activityIndicator" destination="rKX-yb-zUl" id="TV3-bI-cwj"/>
+                        <outlet property="lyricsTextView" destination="TEH-Sy-prB" id="voa-aM-EEo"/>
+                        <outlet property="songTitleLabel" destination="jIo-U5-t97" id="bKz-4t-ovC"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Rz-t8-iOW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3282.608695652174" y="-271.20535714285711"/>
         </scene>
     </scenes>
     <resources>
